--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return list(filter(lambda x, map(find_term_derivative, function_terms)))"
+    "    return list(filter(lambda x: x[1] , map(find_term_derivative, function_terms)))"
    ]
   },
   {
