--- a/index.ipynb
+++ b/index.ipynb
@@ -1427,7 +1427,7 @@
    ],
    "source": [
     "from plotly import tools\n",
-    "import plotly\n",
+    "import chart_\n",
     "import plotly.plotly as py\n",
     "\n",
     "from graph import make_subplots\n",
