Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1427,8 +1427,8 @@
    ],
    "source": [
     "from plotly import tools\n",
-    "import chart_\n",
-    "import plotly.plotly as py\n",
+    "import chart_studio\n",
+    "import chart_studio.plotly as py\n",
     "\n",
     "from graph import make_subplots\n",
     "\n",
